Project

General

Profile

Actions

Bug #41144

closed

mount.ceph: doesn't accept "strictatime"

Added by Jeff Layton over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
kceph
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The cephfs mount helper doesn't support either strictatime or nostrictatime. It should intercept those options and set/clear MS_STRICTATIME.


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #41465: nautilus: mount.ceph: doesn't accept "strictatime"ResolvedNathan CutlerActions
Copied to CephFS - Backport #41466: mimic: mount.ceph: doesn't accept "strictatime"ResolvedNathan CutlerActions
Actions #1

Updated by Jeff Layton over 4 years ago

  • Subject changed from mount.ceph doesn't accept "strictatime" or "nostrictatime" to mount.ceph doesn't accept "strictatime"

Changing subject. "nostrictatime" seems to be intercepted by /bin/mount, so the mount helper doesn't need to handle it.

Actions #2

Updated by Patrick Donnelly over 4 years ago

  • Project changed from Linux kernel client to CephFS
  • Subject changed from mount.ceph doesn't accept "strictatime" to mount.ceph: doesn't accept "strictatime"
  • Status changed from New to Pending Backport
  • Target version set to v15.0.0
  • Start date deleted (08/06/2019)
  • Source set to Development
  • Backport set to nautilus,mimic
  • Pull request ID set to 29518
  • Component(FS) kceph added
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41465: nautilus: mount.ceph: doesn't accept "strictatime" added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41466: mimic: mount.ceph: doesn't accept "strictatime" added
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF