mount.ceph: properly handle -o strictatime

Otherwise, we get -EINVAL when a mount is attempted.

Fixes: https://tracker.ceph.com/issues/41144
Signed-off-by: Jeff Layton <jlayton@redhat.com>
(cherry picked from commit 51e738d1218b41252ca595641a6e589f98349518)